more features are added for sucurity, to make it more perfect for production